# aloe-analytics

./: .env.example  .gitignore  Dockerfile  TODO.md  crontab  docker-compose.yml  insomnia.json  meltano.yml  production.yml
.postman/: Aloe Analytics.postman_collection.json
abi/: g_uni.json  visor.json
api/: .gitignore  Dockerfile  pyproject.toml
api/.postman/: Aloe Analytics.postman_collection.json
api/api/: main.py
api/scripts/: explain.txt  test_perf.py
pipeline/: Dockerfile  TODO.md  crontab  docker-compose.yml  meltano.yml
pipeline/abi/: charm.json  popsicle.json
pipeline/scripts/: deploy.sh  run_pipeline.sh  start_container.sh
pipeline/transform/: dbt_project.yml
pipeline/transform/models/: blocks.sql  global_stats.sql  historical_balances.sql  net_deposits.sql  observations.sql  pool_returns.sql  pool_stats.sql  pools_with_tokens.sql  prices.sql  prices_per_block.sql  share_price.sql  transfers.sql
pipeline/transform/seeds/: pools.csv  tokens.csv
scripts/: build_and_push_images.sh  cron  deploy.sh  run_in_prod.sh  run_pipeline.sh  start_container.sh
transform/: dbt_project.yml
transform/models/: balance_changes.sql  blocks.sql  deployed_pools.sql  pool_returns.sql  pool_token_balances.sql  pool_token_transfers.sql  pools_with_tokens.sql  prices.sql  prices_per_block.sql  transfers.sql
transform/models/api/: deployed_pools.sql  global_stats.sql  historical_balances.sql  net_deposits.sql  pool_returns.sql  pool_stats.sql
transform/models/balances/: current_balances.sql  historical_balances.sql  (+2 more)
transform/seeds/: pools.csv  tokens.csv
(+18 files in other folders)
