[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Matt Evenson <mevenson@usc.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
httpx = "^0.23.0"
pendulum = "^2.1.2"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
databases = "^0.6.0"
fastapi-cache2 = "^0.1.8"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.28.1"
cloudscraper = "^1.2.60"
tdqm = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
